Bug 1974172 - Fix trending searches variant B context menu cut off. r=home-newtab-reviewers,npypchenko
Differential Revision: https://phabricator.services.mozilla.com/D256943

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/TrendingSearches/_TrendingSearches.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/TrendingSearches/_TrendingSearches.scss
@@ -209,4 +209,12 @@
       object-fit: contain;
     }
   }
+
+  &.last-item .trending-searches-context-menu .context-menu {
+    margin-block-start: var(--space-large);
+    margin-inline-end: var(--space-large);
+    margin-inline-start: auto;
+    inset-inline-end: 0;
+    inset-inline-start: auto;
+  }
 }
